--- a/src/Components/TopNavigation/TopNavigation.css
+++ b/src/Components/TopNavigation/TopNavigation.css
@@ -3,13 +3,13 @@
     justify-content: center;
     align-items: center;
     padding: 10px;
-    background: #3c009d; /* Keep the header color */
+    background: #3c009d; 
   }
   
   .nav-item {
     padding: 10px 15px;
     margin: 0 10px;
-    color: #fff; /* Text color */
+    color: #fff; 
     text-decoration: none;
     font-weight: 700;
     border-radius: 50px;
